# multifora

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: calendar_event.py  chat.py  compendium.py  config.py  db.py  gcal.py  gcal_old.py  gpt_ngui.py  llm.py  main.py  masking.py  ngui.py  tools.py  ui_steps.py  utils.py
