[project]
name = "multifora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogoogle>=5.15.0",
    "fastmcp>=2.11.1",
    "google-api-python-client>=2.178.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "humanize>=4.12.3",
    "langchain>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.3",
    "pydantic-settings>=2.10.1",
]
