[project]
name = "multifora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogoogle>=5.15.0",
    "dawg-python>=0.7.2",
    "dawg2>=0.13.2",
    "fastmcp>=2.11.1",
    "google-api-python-client>=2.178.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "gradio>=5.42.0",
    "humanize>=4.12.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-deepseek>=0.1.4",
    "langchain-gigachat>=0.3.12",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.3",
    "natasha>=1.6.0",
    "nicegui>=2.23.0",
    "panel>=1.7.5",
    "pip>=25.2",
    "presidio-analyzer>=2.2.359",
    "presidio-anonymizer>=2.2.359",
    "pydantic-settings>=2.10.1",
    "pymorphy3>=2.0.4",
    "spacy>=3.8.7",
    "yandexcloud>=0.357.0",
]
